# Axiom

./: .gitignore  .pre-commit-config.yaml  AXIOM_PRO_VALIDATION.py  CMakeLists.txt  CMakePresets.json  GEMINI_READ.txt  LICENSE  PHASE_7_COMPLETION_REPORT.md  PHASE_7_EXECUTION_SUMMARY.md  PHASE_8_BATCH_5_SUMMARY.md  PHASE_8_COMPLETION_REPORT.md  QUICKSAVE.md  README.md  README.md.backup  RELEASE_v3.1.1.md  ROADMAP.md  SONARQUBE_ANALYSIS_COMPLETE.md  SONARQUBE_ANALYSIS_REPORT.md  SONARQUBE_ASSESSMENT_REPORT.md  SONARQUBE_REMEDIATION_PLAN.md  TODO_PHASE_LIST.md  asan_test.cpp  changes.txt  config.json  fix_pre_commit.py  fix_script.py  fix_yaml.py  nav_error.txt  nav_fail_diag.txt  patch_actions.sh  patch_cpp.diff  patch_h.diff  patch_verify.py  patch_verify2.py  plan.md  pyproject.toml  recovery_diag.txt  reorg.py  requirements-optional.txt  run_kensui.bat  (+10 more)
axui/: CMakeLists.txt  vcpkg.json
axui/compiler/: CMakeLists.txt
axui/core/: app_runner.cpp  app_runner.h
axui/examples/: minimal.axui
axui/qml/: CMakeLists.txt
axui/runtime/: CMakeLists.txt
axui/themes/: shadow_pure.axtheme  shadow_soft.axtheme
axui/widgets/: CMakeLists.txt  pluto_navigator.cpp  pluto_navigator.h  throughput_node.cpp  throughput_node.h
engine/: CMakeLists.txt
engine/api/: algebraic_parser.cpp  axiom_bridge.cpp  kensui_bridge.cpp  linear_system_parser.cpp  nanobind_interface.cpp  plot_parser.cpp  python_bindings.cpp  python_engine.cpp  python_parser.cpp  python_repl.cpp  statistics_parser.cpp  symbolic_parser.cpp  unit_parser.cpp
engine/benchmarks/: CMakeLists.txt  benchmark_main.cpp  harmonic_arena_bench.cpp  harmonic_arena_unified_bench.cpp  zero_allocation_benchmark.cpp
engine/compute/: ast_analyzer.cpp  eigen_engine.cpp  mantis_heuristic.cpp  node_dispatcher.cpp  plot_engine.cpp  sleef_wrapper.cpp  sleef_wrapper.h  statistics_engine.cpp  symbolic_engine.cpp  zenith_jit.cpp
engine/core/: arena_allocator.cpp  cognitive_commander.cpp  cognitive_ecu.cpp  cpu_optimization.cpp  crash_dump.cpp  daemon_engine.cpp  dynamic_calc.cpp  memory_pool.cpp  native_worker_main.cpp  pluto_controller.cpp  pmu_orchestrator.cpp  sandbox_proxy.cpp  secure_vault.cpp  sentry.cpp  string_helpers.cpp  unit_manager.cpp
engine/dispatch/: execution_orchestrator.cpp  execution_orchestrator.h  execution_orchestrator_capi.cpp  execution_orchestrator_capi.h  selective_dispatcher.h  signal_exec_traits.h
engine/include/: IParser.h  algebraic_parser.h  arena.h  arena_allocator.h  ast_analyzer.h  ast_nodes.h  axiom_bridge.h  axiom_export.h  axiom_status.h  cognitive_commander.h  cognitive_ecu.h  cpu_optimization.h  crash_dump.h  daemon_engine.h  dynamic_calc.h  dynamic_calc_types.h  eigen_engine.h  expression_policy.h  extended_types.h  fixed_vector.h  harmonic_string.h  ingress.h  kensui_bridge.h  linear_system_parser.h  lock_free_ring_buffer.h  mantis_heuristic.h  mantis_solver.h  memory_pool.h  nanobind_interface.h  optimized_order_book_level.h  pch.h  plot_engine.h  plot_parser.h  pluto_controller.h  pmu_orchestrator.h  python_engine.h  python_parser.h  python_repl.h  sandbox_ipc.h  sandbox_proxy.h  (+16 more)
engine/ipc/: ingress.cpp  telemetry.cpp
engine/runtime/: cognitive_commander.cpp  cognitive_ecu.cpp  daemon_engine.cpp  sandbox_proxy.cpp  secure_vault.cpp  sentry.cpp
expressway/: CMakeLists.txt
expressway/core/: vulkan_init.cpp
expressway/scene/: axiom_expressway_node.cpp
expressway/shaders/: dirac_glass.frag  dirac_glass.vert  dirac_glow.frag  mantis_nav.frag
products/dashboard/: CMakeLists.txt
products/studio/: CMakeLists.txt
prototypes/ring_ui_prototype/: CMakeLists.txt
src/: CMakeLists.txt  algebraic_parser.cpp  arena_allocator.cpp  cognitive_ecu.cpp  cpu_optimization.cpp  crash_dump.cpp  daemon_engine.cpp  dynamic_calc.cpp  eigen_engine.cpp  eigen_engine.cpp.orig  ingress.cpp  kensui_bridge.cpp  linear_system_parser.cpp  main.cpp  mantis_heuristic.cpp  nanobind_interface.cpp  plot_engine.cpp  plot_parser.cpp  pluto_controller.cpp  pmu_orchestrator.cpp  python_bindings.cpp  python_engine.cpp  python_parser.cpp  python_repl.cpp  secure_vault.cpp  selective_dispatcher.cpp  statistics_engine.cpp  statistics_parser.cpp  string_helpers.cpp  symbolic_engine.cpp  symbolic_parser.cpp  telemetry.cpp  unit_manager.cpp  unit_parser.cpp  zenith_jit.cpp
src/gui/: throughput_node.cpp
tests/: CMakeLists.txt  GIGA_TEST_SUITE.md  PLOTTING_TEST_CASES.md  README.md  alignment_test.cpp  ast_drills.cpp  benchmark_suite.cpp  debug_detailed.cpp  debug_limit.cpp  detailed_hardware_alignment_test.cpp  differential_suite.cpp  edge_case_suite.cpp  enclave_test.cpp  giga_test_suite.cpp  hardware_alignment_test.cpp  harmonic_arena_test.cpp  harmonic_string_test.cpp  jit_correctness_test.cpp  sandbox_security_test.py  sandbox_stress_test.cpp  test_calculus_final.cpp  test_calculus_simple.cpp  test_calculus_suite.cpp  test_main.cpp  tests.cpp  zenith_integrity_tests.cpp
tests/benchmarks/: aos_soa_benchmark.cpp  axui_pluto_render_bench.cpp  axui_style_pipeline_bench.cpp  bump_allocator_benchmark.cpp  false_sharing_benchmark.cpp  ingress_bench.cpp  pipeline_flush_benchmark.cpp  stats_bench.cpp
tests/concurrency/: arena_stress.cpp
tests/examples/: COMPLEX_PLOT_TESTS.py
tests/functional/: quick_axiom_pro_test.py  test_axiom_pro_comprehensive.py  test_axiom_pro_features.py  test_direct.py  test_engine.py  test_fast_render_features.py  test_log2.py  test_log_functions.py  test_math_functions.py  test_modulus.py  test_signal_toolkit_edge_cases.py
tests/fuzz/: parser_fuzzer.cpp  zenith_jit_fuzzer.cpp
tests/hardware/: simd_matrix_test.cpp  test_enclave_attestation.cpp
tests/integration/: core_architecture_test.py  senna_speed_test.py  test_compile.cpp  test_phase2.cpp  test_phase3_simple.cpp
tests/multi_arch/: parity_suite_benchmark.cpp
tests/performance/: comprehensive_test_suite.py  quick_perf_test.py
tests/security/: sandbox_escape_attempts.py  test_safe_eval.py
tests/unit/: test_all_specs.py  test_eigen_engine.cpp  test_ida_star.cpp  test_mantis_solver.cpp  test_pluto_core.cpp  test_statistics_optimized.cpp  (+1 more)
(+384 files in other folders)
