[build-system]
requires = ["scikit-build-core >= 0.4.3", "nanobind >= 2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "axiom"
version = "3.0.0"
description = "AXIOM Zenith: High-Performance Determinitic Computing Engine"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Fabulous-Samurai", email = "samurai@axiom.tech" },
]
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[tool.scikit-build]
cmake.version = ">=3.20"
ninja.version = ">=1.10"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["include", "src", "core", "CMakeLists.txt", "cmake"]

[tool.scikit-build.cmake.define]
AXIOM_ENABLE_NANOBIND = "ON"
AXIOM_BUILD_PYTHON_WHEEL = "ON"
